fix scrollbar-gutter + padding-inline so it is 24px on all sides

--- a/base/src/components/kystverket/SlotDialog/SlotDialog.module.css
+++ b/base/src/components/kystverket/SlotDialog/SlotDialog.module.css
@@ -23,9 +23,8 @@
 .dialogBlock {
   --scrollbar-deadzone: var(--ds-size-2);
 
-  padding-left: var(--ds-size-7);
-  scrollbar-gutter: auto both-edges;
-  padding-inline: calc(var(--ds-size-7) - var(--scrollbar-deadzone));
+  scrollbar-gutter: stable both-edges;
+  padding-inline: calc(var(--ds-size-5) + var(--scrollbar-deadzone));
   &.withDividers:not(:first-of-type) {
     border-top: 1px solid var(--ds-color-neutral-surface-hover);
   }
